--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -1,16 +1,16 @@
 <!doctype html>
 <html>
-  <head>
+<head>
     <meta charset="UTF-8" />
     <title>Electron</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'"
+        http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
     />
-  </head>
+</head>
 
-  <body>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+<body>
+<script type="module" src="/src/main.ts"></script>
+</body>
 </html>
