--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,11 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
         http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:;"
+        content="
+        default-src 'self' api.openai.com *.openai.com;; 
+        script-src 'self'; style-src 'self' 
+        'unsafe-inline'; img-src 'self' data:;
+        "
     />
 </head>
 
