Add dynamic title

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Electron</title>
+    <title>MySchemaFlow</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
         http-equiv="Content-Security-Policy"
         content="
-        default-src 'self' api.openai.com *.openai.com;; 
-        script-src 'self'; style-src 'self' 
+        default-src 'self' api.openai.com *.openai.com;;
+        script-src 'self'; style-src 'self'
         'unsafe-inline'; img-src 'self' data:;
         "
     />
